--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "two"
+name = "aoc"
 version = "0.1.0"
-authors = ["acheronfail"]
+authors = ["acheronfail <acheronfail@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
