--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,13 @@ path = "src/main.rs"
 anyhow = "1.0.34"
 clap = "3.0.0-beta.2"
 ctrlc = "3.1.7"
+html2text = "0.2.1"
 keytar = "0.1.3"
 paste = "1.0.3"
 regex = "1.4.2"
 reqwest = "0.10.9"
 rpassword = "5.0.0"
+scraper = "0.12.0"
 strum = "0.20.0"
 strum_macros = "0.20.1"
 tokio = { version = "0.2", features = ["full"] }
