--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ scraper = "0.12.0"
 strum = "0.20.0"
 strum_macros = "0.20.1"
 tokio = { version = "0.2", features = ["full"] }
+fancy-regex = "0.4.1"
