--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ path = "src/main.rs"
 anyhow = "1.0.34"
 clap = "3.0.0-beta.2"
 ctrlc = "3.1.7"
+fancy-regex = "0.4.1"
 html2text = "0.2.1"
+itertools = "0.9.0"
 keytar = "0.1.3"
 paste = "1.0.3"
 regex = "1.4.2"
@@ -26,4 +28,3 @@ scraper = "0.12.0"
 strum = "0.20.0"
 strum_macros = "0.20.1"
 tokio = { version = "0.2", features = ["full"] }
-fancy-regex = "0.4.1"
