--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ fancy-regex = "0.4.1"
 html2text = "0.2.1"
 itertools = "0.9.0"
 keytar = "0.1.3"
+lazy_static = "1.4.0"
 paste = "1.0.3"
 regex = "1.4.2"
 reqwest = "0.10.9"
