--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ itertools = "0.9.0"
 keytar = "0.1.3"
 lazy_static = "1.4.0"
 paste = "1.0.3"
+pcre2 = "0.2.3"
 regex = "1.4.2"
 reqwest = "0.10.9"
 rpassword = "5.0.0"
