--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ html2text = "0.2.1"
 itertools = "0.9.0"
 keytar = "0.1.3"
 lazy_static = "1.4.0"
+mod_exp = "1.0.1"
 paste = "1.0.3"
 pcre2 = "0.2.3"
 regex = "1.4.2"
