2020-20: refactor to use `easy_collections` and other minor improvements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 anyhow = "1.0.34"
 clap = "3.0.0-beta.2"
 ctrlc = "3.1.7"
+easy_collections = "0.3.1"
 fancy-regex = "0.4.1"
 html2text = "0.2.1"
 itertools = "0.9.0"
