--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,37 +1,5 @@
-[package]
-name = "aoc"
-version = "0.1.0"
-authors = ["Callum Oz <acheronfail@gmail.com>"]
-edition = "2018"
-
-[lib]
-name = "aoc_lib"
-path = "src/lib.rs"
-
-[[bin]]
-name = "aoc"
-path = "src/main.rs"
+[workspace]
+members = ["aoc", "2019", "2020", "2021"]
 
 [profile.release]
 debug = true
-
-[dependencies]
-anyhow = "1.0.34"
-clap = "3.0.0-beta.2"
-ctrlc = "3.1.7"
-easy_collections = "0.3.2"
-fancy-regex = "0.4.1"
-html2text = "0.2.1"
-itertools = "0.9.0"
-keytar = "0.1.3"
-lazy_static = "1.4.0"
-mod_exp = "1.0.1"
-paste = "1.0.3"
-pcre2 = "0.2.3"
-regex = "1.4.2"
-reqwest = "0.10.9"
-rpassword = "5.0.0"
-scraper = "0.12.0"
-strum = "0.20.0"
-strum_macros = "0.20.1"
-tokio = { version = "0.2", features = ["full"] }
