--- a/aoc/Cargo.toml
+++ b/aoc/Cargo.toml
@@ -17,8 +17,8 @@ path = "src/main.rs"
 anyhow = "1.0.34"
 clap = "3.0.0-beta.2"
 ctrlc = "3.1.7"
+directories = "4.0.1"
 html2text = "0.2.1"
-keytar = "0.1.3"
 lazy_static = "1.4.0"
 paste = "1.0.3"
 reqwest = "0.10.9"
