--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["aoc", "2019", "2020", "2021"]
+members = ["aoc", "2019", "2020", "2021", "2022"]
 
 [profile.release]
 debug = true
